examples/python-web-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
spec:
  rules:
    - host: "foo.bar.com"
      http:
        paths:
          - path: "/bar"
            pathType: Prefix
            backend:
              service:
                name: python-django-app-service
                port:
                  number: 80
